{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 76,
  "lineage": "00f49086-ee0c-b177-d875-7d6c3f0a4260",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02f829375c976f810",
            "arn": "arn:aws:ec2:ap-south-1:905418199754:instance/i-0c2b85f79e5836e79",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c2b85f79e5836e79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "NewKey.pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f2f69506de401cf6",
            "private_dns": "ip-192-168-1-117.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.117",
            "public_ip": "15.207.98.28",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09cbe822013ddd7d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-041b72d4f98d522c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5ee6136afa147ee",
            "tags": {
              "name": "Terraform"
            },
            "tags_all": {
              "name": "Terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041b72d4f98d522c4"
            ]
          },
          "dependencies": [
            "aws_key_pair.newKey",
            "aws_security_group.web-server",
            "aws_subnet.Public",
            "aws_vpc.terraform_created-vpc",
            "data.aws_ami.myec2",
            "data.aws_availability_zones.available",
            "local_file.private_key_pem",
            "local_file.public_key",
            "tls_private_key.generate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terra-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:internet-gateway/igw-02288cb83f9502e0d",
            "id": "igw-02288cb83f9502e0d",
            "owner_id": "905418199754",
            "tags": {
              "Name": "Terraform-IGW",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "Terraform-IGW",
              "owner": "Terraform"
            },
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "dependencies": [
            "aws_vpc.terraform_created-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:route-table/rtb-00e9c3d91b51f1d1d",
            "id": "rtb-00e9c3d91b51f1d1d",
            "owner_id": "905418199754",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "Private Route",
              "owner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_created-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:route-table/rtb-07dc0e9b371f30e1c",
            "id": "rtb-07dc0e9b371f30e1c",
            "owner_id": "905418199754",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02288cb83f9502e0d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_route",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "Public_route",
              "owner": "Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_vpc.terraform_created-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d7b0c1ae0b64815",
            "route_table_id": "rtb-00e9c3d91b51f1d1d",
            "subnet_id": "subnet-024d8f3090e17746b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.Private",
            "aws_vpc.terraform_created-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f413538be85ff10c",
            "route_table_id": "rtb-07dc0e9b371f30e1c",
            "subnet_id": "subnet-0c5ee6136afa147ee"
          },
          "dependencies": [
            "aws_internet_gateway.terra-IGW",
            "aws_route_table.public",
            "aws_subnet.Public",
            "aws_vpc.terraform_created-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:security-group/sg-041b72d4f98d522c4",
            "description": "This is a web server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041b72d4f98d522c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Web-server",
            "name_prefix": "",
            "owner_id": "905418199754",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_created-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:subnet/subnet-024d8f3090e17746b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024d8f3090e17746b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418199754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private_subnet",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "Private_subnet",
              "owner": "Terraform"
            },
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "dependencies": [
            "aws_vpc.terraform_created-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:subnet/subnet-0c5ee6136afa147ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ee6136afa147ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418199754",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_subnet",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "Public_subnet",
              "owner": "Terraform"
            },
            "vpc_id": "vpc-0a6b30e79f404dce4"
          },
          "dependencies": [
            "aws_vpc.terraform_created-vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_created-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:905418199754:vpc/vpc-0a6b30e79f404dce4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/20",
            "default_network_acl_id": "acl-04bee002fa8b28d0a",
            "default_route_table_id": "rtb-05edd63bb34debdaf",
            "default_security_group_id": "sg-05e4f217f20bfd6d0",
            "dhcp_options_id": "dopt-06e540137ab866344",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a6b30e79f404dce4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05edd63bb34debdaf",
            "owner_id": "905418199754",
            "tags": {
              "Name": "terra_creation",
              "department": "Prod",
              "owner": "Terraform"
            },
            "tags_all": {
              "Name": "terra_creation",
              "department": "Prod",
              "owner": "Terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}